# tools

./: .gitignore  Cargo.toml  README.md  pyrightconfig.json  rust-toolchain.toml
acho/: Makefile  acho.c  acho.h  acho_err.c  acho_err.h  config.c  config.example  config.h
acho/ipc/: Makefile  ipc.h  ipc_lin.c  ipc_mac.c  ipc_win.c
acho/log/: Makefile  log.c  log.h
acho/platform/: Makefile  devices.c  devices.h  platform.c  platform.h  probe.c  probe.h
assault/: Cargo.toml  mod.rs
assault/live/ui/: mod.rs
d/: Cargo.toml  describe.project  file.json  rustfmt.toml
d/crates/builder/: Cargo.toml
d/crates/cli/: Cargo.toml
d/src/: directories.rs  main.rs
dcr/: Cargo.toml  build.dbl
dcr/crates/cgroup-devices/: Cargo.toml
dcr/crates/containerd-client/: Cargo.toml
dcr/crates/libcontainers/: Cargo.toml
dkms/: .env.example  .gitignore  README.md  cli.py  cli_examples.py  pyproject.toml  run_cli.py  start_server.py
dkms/src/: crypto.py  database.py  main.py
dkms/tests/: example_usage.py  test_api.py  test_fastapi.py  test_server.py
junk/ave/: README.md  agent.py  combined.json  main.py  pyproject.toml  questions_pairs.json
junk/ave/src/: __init__.py  __main__.py
junk/ave/tests/: test_schema_service.py
junk/ccgmod/: README.md  pyproject.toml
junk/ccgmod/ccgmod/: __init__.py  block.py  convg.py  mha.py
junk/ccgmod/scripts/: convert.py
junk/dlog-showcase/: Cargo.toml
junk/dlog-showcase/src/: main.rs
junk/do-search/: .gitignore  main.py  pyproject.toml
junk/emacs/tests/: Makefile  main.el
junk/embedder/: README.md  pyproject.toml  sample_texts.txt
junk/embedder/embedder/: __main__.py  device.py  embeddings.py  interactive.py  pipeline.py  reduction.py  visualization.py
junk/eshell-test/: Cargo.toml
junk/eshell-test/src/: main.rs
junk/fit-box/: main.py  pyproject.toml  test.ipynb
junk/gui-simple-ttk/: main.py  original.py
junk/interview/bot/: main.py
junk/kvcache/: generate.py  main.py  pyproject.toml
junk/language-tests/cpp/: describe.project
junk/language-tests/python/: describe.project
junk/mcproxy/: .gitignore  ARCHITECTURE.md  Cargo.toml  PLUGIN_API.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.example.yaml  deps.dot
junk/mcproxy/src/: config.rs  connection.rs  lib.rs  main.rs  plugin.rs
junk/mcproxy/src/plugins/: bandwidth_limiter.rs  chat_filter.rs  mod.rs  packet_logger.rs
junk/mcproxy/tests/: plugin_tests.rs
junk/mfm-coder/: main.py  pyproject.toml  test.ipynb
junk/mkds/: main.py  pyproject.toml
junk/pixelate/: Cargo.toml  bench.sh
junk/pixelate/executables/bench/: Cargo.toml
junk/pixelate/executables/bench/src/: main.rs
junk/pixelate/executables/client/: Cargo.toml
junk/pixelate/executables/client/src/: main.rs
junk/pixelate/executables/dnd/: Cargo.toml  config.example.yaml
junk/pixelate/executables/dnd/src/: config.rs  main.rs
junk/pixelate/executables/dnd/src/backing_store/: disk.rs  mod.rs  ram.rs
junk/pixelate/executables/dnd/src/controller/: mod.rs  optimized.rs  primitive.rs
junk/pixelate/executables/end/: Cargo.toml
junk/pixelate/executables/end/src/: main.rs
junk/pixelate/executables/engine/: Cargo.toml
junk/pixelate/executables/engine/src/: main.rs  types.rs
junk/pixelate/executables/engine/src/backing_store/: mod.rs  ram.rs
junk/pixelate/executables/engine/src/controller/: primitive.rs
junk/pixelate/executables/und/: Cargo.toml
junk/pixelate/proto/engine-proto/: Cargo.toml  build.rs  engine.proto
junk/pixelate/proto/engine-proto/src/: lib.rs
junk/play-with-git/: Cargo.toml
junk/play-with-git/src/: main.rs
junk/playstyle/: index.html  package.json
junk/pymc/: depends.json  extract.py  main.py  pyproject.toml
junk/qt-explore/: main.py  pyproject.toml
junk/simulate/: Cargo.toml  README.md  SUMMARY.md  demo.sh
junk/simulate/examples/: basic.llmsub  complex.ass  complex.llmsub  sample.ass  sample.llmsub  sample_no_grouping.llmsub
junk/simulate/src/: ass_parser.rs  converter.rs  main.rs
junk/trickonomics/: Cargo.toml
junk/trickonomics/src/: engine.rs  main.rs
junk/twitch/: main.py  pyproject.toml
junk/twitch-colonq/: apphost.cs  apphost.run.json
junk/twitch-colonq/twitch-ingest/: main.py  pyproject.toml
junk/twitch/data/: context.py
junk/twitch/data/models/: message.py
junk/twitch/data/tables/: message.py
libraries/mapreduce/docs/: proto.md
libraries/python/functional/: pyproject.toml  some.py
libraries/python/functional/src/diabloproject_functional/: __init__.py  operators.py  reduce.py  stateful.py
libraries/rust/diabloproject/: Cargo.toml
libraries/rust/diabloproject/src/: lib.rs
lovely/: .gitignore  fuse_client.py  fuse_server.py  inventory.toml  main.py  pyproject.toml  setup_scripts.py  sys_check.sh  system_info.py
minecraft/smth/: build.gradle  gradle.properties
paste/cli/: Cargo.toml
paste/cli/src/: main.rs
paste/ui/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json
pixelate/: Cargo.toml
pixelate/src/: lib.rs  main.rs
spectre/api/: Cargo.toml  Dockerfile  describe.project
spectre/cli/: Cargo.toml
spectre/cli/src/: main.rs
spectre/spectre-api/: Cargo.toml
spectre/spectre-cli/: Cargo.toml
spectre/ui/: Dockerfile  package.json
tailborn/: Cargo.toml  Dockerfile  arch.md  goal.md  notes.md
tailborn/crates/control/: Cargo.toml
tailborn/crates/control/src/: entity.rs  lib.rs  proto.rs
tailborn/crates/csv2tdh/: Cargo.toml
tailborn/crates/libasync/: Cargo.toml
tailborn/crates/libasync/src/: lib.rs
tailborn/crates/libconf/: Cargo.toml
tailborn/crates/libconf/src/: lib.rs  log4rs.yml  logging.rs  user.rs
tailborn/crates/libdfs/: Cargo.toml
tailborn/crates/libdfs/src/: client.rs  lib.rs  server.rs  store.rs
tailborn/crates/libprocess/: Cargo.toml
tailborn/crates/network/: Cargo.toml
tailborn/crates/network/src/: address.rs  lib.rs  proto.rs  server.rs
tailborn/crates/tailshell/: Cargo.toml  tailshell_graph.dot
tailborn/crates/tailshell/src/: lib.rs
tailborn/crates/tb/: Cargo.toml
tailborn/crates/tb/src/: main.rs
tailborn/src/: dfs.rs  main.rs
(+123 files in other folders)
