[workspace]
members = [
    "d", "junk/play-with-git",
    "libraries/rust/cmd",
    "libraries/rust/describe-project",
    "libraries/rust/diabloproject",
    "libraries/rust/dlog", "libraries/rust/metaobject",
    "libraries/rust/std",
    "libraries/rust/yson"
]
resolver = "3"

[workspace.dependencies]
cmd = { path = "libraries/rust/cmd" }
yson = { path = "libraries/rust/yson" }
stdd = { path = "libraries/rust/std" }
describe-project = { path = "libraries/rust/describe-project" }
diabloproject = { path = "libraries/rust/diabloproject", default-features = false }
dlog = { path = "libraries/rust/dlog" }
