[package]
name = "tailborn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"
base64 = "0.22.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
tempfile = "3"
