[workspace]
members = [
    "crates/tb",
    "crates/libdfs",
    "crates/libprocess",
    "crates/csv2tdh",
    "crates/libasync",
    "crates/libconf", "crates/control", "crates/network", "crates/tailshell",
]
default-members = ["crates/tb"]
package.license = "MIT"
resolver = "3"

[workspace.dependencies]
# Tokio stack
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = ["serde"] }
hyper = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tracing = { git = "https://github.com/tokio-rs/tracing" }

# Async
futures = "0.3.31"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Serialization/Deserialization
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
toml = "0.8.22"

# Other
directories = "6.0.0"
log = "0.4.27"
log4rs = "1.3.0"

# Members
csv2tdh = { path = "crates/csv2tdh" }
tb = { path = "crates/tb" }
libprocess = { path = "crates/libprocess" }
libdfs = { path = "crates/libdfs" }
libconf = { path = "crates/libconf" }
libasync = { path = "crates/libasync" }
network = { path = "crates/network" }
control = { path = "crates/control"}
