[project]
name = "ccgmod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pyright>=1.1.407",
    "ruff>=0.14.2",
    "tensorflow>=2.20.0",
]
