[package]
name = "mcproxy"
version = "0.1.0"
edition = "2024"

[lib]
name = "mcproxy"
path = "src/lib.rs"

[[bin]]
name = "mcproxy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
azalea-protocol = "0.14.0+mc1.21.8"
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
