[package]
name = "spectre-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking"], default-features = false }
replay = { workspace = true }
stdd = { workspace = true }
tui-elements = { workspace = true }
vte = { version = "0.15.0", features = ["ansi"] }
