[package]
name = "pixelate-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.1" }
engine-proto = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
crossbeam-channel = "0.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
