[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
engine-proto = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = { workspace = true }
serde = { workspace = true }

